# fixed.codes

./: .dockerignore  .gitignore  Cargo.toml  README.md  []  apps.json
.github/actions/: deploy-service-matrix.yaml
.github/actions/arch/: Nuxt.yaml  Rust.yaml
.github/workflows/: Nuxt.yaml  Rust.yaml  checkout-dev.yaml  checkout-production.yaml  deploy-dev.yaml  deploy-kubernetes.yaml  deploy-prod.yaml  deploy-service-matrix.yaml  deploy-service.yaml  docker-build.yaml  generic.yaml  janitor.yaml
deploy/: Dockerfile  dev.web.Dockerfile  elm.Dockerfile  nuxt.Dockerfile  rust.Dockerfile  trunk.Dockerfile  web.Dockerfile
deploy/charts/basic_service/: Chart.yaml  values.yaml
deploy/charts/basic_service/templates/: deployment.yaml  service.yaml
deploy/charts/web/: Chart.yaml  values.yaml
deploy/charts/web/templates/: deployment.yaml
local_workflows/: deploy-kubernetes.yaml  deploy-service-matrix.yaml  deploy-service.yaml  docker-build.yaml
mc-server/: Cargo.toml
mc-server/src/: initial_state_handler.rs  main.rs
mc_server/: Cargo.toml
mc_server/src/: main.rs
outputs/: web.json  web.yaml
resources/landing/: landing.html  script.js  styles.css
resources/web/landing/: landing.html  styles.css
scripts/: build-service-diagram.sh  initial-service-constructor.sh  process-service-variables.sh  process-service.sh
services/: RUST_WORKSPACE.Dockerfile  rust_workspace.Dockerfile
static-proxy/: Cargo.toml
static-proxy/src/: main.rs
web/: .gitignore  Cargo.toml  README.md  build_template.json  deploy_info.json  elm.json  index.html  local.sh  nginx.conf  nuxt.config.js  nuxt.config.ts  package.json
web-api/: Cargo.toml  build_template.json
web-api/src/: landing.rs  main.rs
web/assets/: index.html  styles.css
web/assets/styles/: styles.css
web/components/: IconLink.vue  SiteNavigation.vue
web/layouts/: default.vue
web/pages/: about.vue  index.vue  mc.vue  protocol_1_19_3.json
web/scripts/: local.sh
web/src/: GameOfLife.elm  Main.elm  RouterParser.elm  SystemRouter.elm  landing.rs  main.rs  router.rs
web/src/components/: mod.rs  nav.rs
web/src/components/common_lib/: flex.rs
web/styles/: component-styles.css  styles.css
web_commons/: Cargo.toml  README.md
web_commons/src/: files.rs  lib.rs  logger.rs
