[package]
name = "mc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_commons = { path = "../web_commons" }

drax = { git = "https://github.com/ScrapyardRs/Drax", branch = "develop", features = ["nbt"] }
mcprotocol = { git = "https://github.com/ScrapyardRs/MCProtocol.rs", branch = "develop" }
shovel = { git = "https://github.com/ScrapyardRs/Shovel", branch = "develop" }
tokio = { version = "1.24.1", features = ["full"] }
anyhow.workspace = true
log.workspace = true
