[package]
name = "static-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_commons = { path = "../web_commons" }

# workspace dependencies
anyhow.workspace = true
log.workspace = true
actix-web = "4.2.1"
