[package]
name = "web_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.2.2"
actix-web = "4.2.1"
anyhow = "1.0.66"
log = "0.4.17"
mime = "0.3.16"
mime_guess = "2.0.4"
