[package]
name = "web_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
anyhow.workspace = true
chrono.workspace = true
fern.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }

[features]
serde_support = ["serde", "serde_derive", "log/serde"]
